--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Probas js</title>
   </head>
   <body>
-    <script src="/desestruturacion/desestruturacion2.js"></script>
+    <script src="/8funcions/funcions8.js"></script>
   </body>
 </html>
