coquito la pieza

--- a/12DOMMethods/domMethods.html
+++ b/12DOMMethods/domMethods.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dom Methods</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
-    <ol>
+    <ol id="deleteThisList">
       <li>Hola</li>
       <li>Julio</li>
       <li>e</li>
       <li>Diego</li>
       <li>Rianxo</li>
     </ol>
+
+    <table id="taboa">
+      Texto
+      <tr>
+        <td>Test</td>
+      </tr>
+    </table>
+
+    <ul id="ulForAddingLi"></ul>
+
+    <ul id="listaULExercicio5">
+      <li id="one">1</li>
+      <li id="two">4</li>
+    </ul>
   </body>
   <script src="domMethods.js" defer></script>
 </html>
