--- a/13eventos/eventos2.html
+++ b/13eventos/eventos2.html
@@ -12,10 +12,11 @@
       <fieldset>
         <legend>Engadir elementos a unha lista</legend>
         <label for="text">Texto:</label>
-        <input type="text" name="text" /><br /><br />
-        <input type="button" value="Engadir Elemento" id="button2" />
+        <input type="text" name="text" id="inputEx2" /><br /><br />
+        <button type="button" id="buttonEx2">Engadir Elemento</button>
       </fieldset>
     </form>
-    <ul></ul>
+    <ul id="ulEx2"></ul>
   </body>
+  <script src="./eventos2.js" defer></script>
 </html>
