--- a/15formularios/formularios2.html
+++ b/15formularios/formularios2.html
@@ -43,6 +43,7 @@ engade ao elemento unha mensaxe de erro personalizada.
         email.reportValidity();
       } else {
         email.setCustomValidity('');
+        email.reportValidity();
       }
     });
 
