--- a/15formularios/formularios1.html
+++ b/15formularios/formularios1.html
@@ -38,7 +38,7 @@
             name="uname"
             id="uname"
             required
-            pattern="[a-z].[a-z0-9]{3}"
+            pattern="[a-z]\.[a-z0-9]{3}"
           />
         </li>
         <li>
@@ -48,7 +48,7 @@
             name="email"
             id="email"
             required
-            pattern="[A-Za-z0-9]+@bigcorp.eu"
+            pattern="[A-Za-z0-9]+@bigcorp\.eu"
           />
         </li>
         <li>
