--- a/listaCompra/compra.html
+++ b/listaCompra/compra.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="page">
+      <img src="./img/bolsas.png" alt="" />
       <h1>Lista da compra</h1>
       <form action="#" id="form">
         <label for="text">Añade artículos:</label>
@@ -19,9 +20,9 @@
         />
         <button type="button" id="boton">¡Click!</button>
       </form>
-      <h3>Debes comprar:</h3>
       <button type="button" class="oculto" id="borraTodo">Borra TODO</button>
       <input type="text" name="filter" id="filter" placeholder="filter" />
+      <h3>Debes comprar:</h3>
       <div id="articulos"></div>
     </div>
   </body>
