--- a/tresEnRaya/tresEnRaya.html
+++ b/tresEnRaya/tresEnRaya.html
@@ -7,21 +7,26 @@
     <title>33</title>
   </head>
   <body>
-    <div>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
-    <div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-    </div>
-    <div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-    </div>
+    <marquee behavior="scroll" direction="right"
+      ><h1>Que gane o mellor!</h1></marquee
+    >
+    <table>
+      <tr>
+        <td id="1"></td>
+        <td id="2"></td>
+        <td id="3"></td>
+      </tr>
+      <tr>
+        <td id="4"></td>
+        <td id="5"></td>
+        <td id="6"></td>
+      </tr>
+      <tr>
+        <td id="7"></td>
+        <td id="8"></td>
+        <td id="9"></td>
+      </tr>
+    </table>
   </body>
   <script src="./tresEnRaya.js" defer></script>
 </html>
