--- a/repasoPrimeiroTrimestre/exercicios/5tresEnRaya/tresEnRaya.html
+++ b/repasoPrimeiroTrimestre/exercicios/5tresEnRaya/tresEnRaya.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./tresEnRaya.css" />
-    <title>33</title>
+    <title>Tres en Raya!</title>
   </head>
   <body>
     <marquee behavior="scroll" direction="right"
       ><h1>Que gane o mellor!</h1></marquee
     >
+    <h3 id="informacion"></h3>
     <table>
       <tr>
         <td id="1"></td>
@@ -27,6 +28,7 @@
         <td id="9"></td>
       </tr>
     </table>
+    <button type="button" id="reinicio">Reinicio!</button>
   </body>
   <script src="./tresEnRaya.js" defer></script>
 </html>
