--- a/segundoTrimestre/leaflet/leaflet2/leaflet2.html
+++ b/segundoTrimestre/leaflet/leaflet2/leaflet2.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leaflet</title>
-    <link rel="stylesheet" href="exercicioLeaflet.css" />
+    <title>Leaflet2</title>
+    <link rel="stylesheet" href="leaflet2.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -13,13 +13,20 @@
     />
   </head>
   <body>
-    <h1>Geolocation</h1>
+    <h1>Garda Coordenadas!</h1>
+    <aside class="oculto">
+      <form action="">
+        <label for="textField">Descripción:</label>
+        <input type="text" name="textField" id="textField" />
+      </form>
+    </aside>
     <div id="map"></div>
   </body>
   <script
     src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""
+    defer
   ></script>
-  <script src="exercicioLeaflet.js" defer></script>
+  <script src="leaflet2.js" defer></script>
 </html>
