--- a/segundoTrimestre/async/async.html
+++ b/segundoTrimestre/async/async.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Async</title>
+    <style>
+        .red {
+            color: red;
+        }
+
+        .blue {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-    <h1>Async JS</h1>
+    <h1 id="title">Async JS</h1>
     <button type="button" class="start" id="start">Start</button>
     <button type="button" class="stop" id="stop">Stop</button>
 </body>
