--- a/segundoTrimestre/json/json2/json2.html
+++ b/segundoTrimestre/json/json2/json2.html
@@ -12,10 +12,20 @@
     <link rel="stylesheet" href="json2.css" />
   </head>
 
-  <body>
+  <body id="g3">
     <header></header>
 
-    <section></section>
+    <section>
+      <a href="https://es.wikipedia.org/wiki/Hombre_Mol%C3%A9cula"
+        ><img src="img/Molecule_Man.jpg" alt="Molecule Man" />
+      </a>
+      <a href="https://es.wevino.store/productos/Uppercut-dry-gin-49-6-vol-0-7l"
+        ><img src="img/uppercutMadame.png" alt="Dry Gin Uppercut"
+      /></a>
+      <a href="https://www.youtube.com/watch?v=PSoOFn3wQV4"
+        ><img src="img/eternalFlame.jpg" alt="Eternal Flame"
+      /></a>
+    </section>
 
     <script></script>
   </body>
