--- a/segundoTrimestre/promesas/thenCatch/thenCatch.html
+++ b/segundoTrimestre/promesas/thenCatch/thenCatch.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promises</title>
+    <title>thenCatch</title>
 </head>
 <body>
     
 </body>
-<script src="promesas2.js" defer></script>
+<script src="thenCatch1.js" defer></script>
 </html>
