--- a/segundoTrimestre/apiFetch/apiFetch2/apiFetch2.html
+++ b/segundoTrimestre/apiFetch/apiFetch2/apiFetch2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
 
-    <title>Our superheroes</title>
+    <title>Our apiSuperHeroes</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Faster+One"
@@ -11,8 +11,7 @@
     />
     <link rel="stylesheet" href="json2.css" />
   </head>
-
-  <body id="g3">
+<body id="g3">
     <header></header>
 
     <section>
@@ -27,5 +26,5 @@
       /></a>
     </section>
   </body>
-  <script src="json2.js"></script>
+<script src="apiFetch2.js" defer></script>
 </html>
