--- a/segundoTrimestre/fetch/fetch1/fetch1.html
+++ b/segundoTrimestre/fetch/fetch1/fetch1.html
@@ -3,22 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="fetch1.css" />
     <title>Fetch</title>
-    <style>
-    table, td, tr{
-     border: 2px solid black;
-     border-collapse: collapse;
-    }
-
-    table {
-    max-width: 75%;
-    }
-
-    td{
-        text-align: center;
-    min-width: 20%;
-    }
-    </style>
   </head>
   <body>
     <label for="numero">Pick an ID:</label>
