--- a/segundoTrimestre/await/await4/await4.html
+++ b/segundoTrimestre/await/await4/await4.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Await</title>
+    <link rel="stylesheet" href="await4.css">
+    <title>Chorbos</title>
 </head>
 <body>
     
 </body>
-<script type="module" src="await1.js" defer></script>
+<script src="await4.js" defer></script>
 </html>
