--- a/segundoTrimestre/jsonServer/jsonServerClientes/clients.html
+++ b/segundoTrimestre/jsonServer/jsonServerClientes/clients.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="clients.css" />
     <title>Our Clients</title>
   </head>
   <body>
     <main>
-      <label for="client">Search for a client:</label>
-      <input type="text" name="client" id="client" />
-      <button type="button" id="clientButton">[X]</button>
+      <form>
+        <label for="client">Search for a client:</label>
+        <input type="text" name="client" id="client" />
+        <button type="button" id="clientButton">[X]</button>
+      </form>
+      <article></article>
     </main>
   </body>
   <script src="index.js" defer></script>
