--- a/segundoTrimestre/webpackLeaflet/src/index.html
+++ b/segundoTrimestre/webpackLeaflet/src/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1><%= htmlWebpackPlugin.options.title %></h1>
-    <div id="map"></div>
+    <main>
+      <input type="text" class="hidden" id="inputMarker"></input>
+      <div id="map"></div>
+  </main>
   </body>
 </html>
