--- a/segundoTrimestre/vue/styleExs/styleExs2.html
+++ b/segundoTrimestre/vue/styleExs/styleExs2.html
@@ -51,13 +51,22 @@ indicada na caixa de texto. -->
 </style>
 
 <div id="app">
-  <label for="inputText" >Pick a Class:</label>
-  <input type="text" name="inputText" id="inputText" v-model="inputValue"/>
-  <p :class=inputValue>
-    Ligar? Ah, te refieres a Gligar, Pokémon tipo tierra/volador introducido en
-    la 2ª generación. A partir de la 4ª generación evoluciona a Gliscor de noche
-    con colmillo agudo equipado. Destaca por su defensa y velocidad, y puede
-    aprender movimientos como danza espada y guillotina.
+  <label for="inputText">Elixe unha clase:</label>
+  <input type="text" name="inputText" id="inputText" v-model="inputValue" />
+  <hr />
+  <label for="inputCor">Elixe unha cor:</label>
+  <input type="text" name="inputCor" id="inputCor" v-model="inputCor" />
+  <hr />
+  <button type="button" @click="toggleVisibility">Oculta o texto</button>
+  <p
+    :class="{[inputValue]: inputValue}"
+    id="parrafo"
+    :style="{color: inputCor}"
+  >
+    Frías... Solemnes... Imbuidas de un poder que escapa a nuestra
+    comprensión... Salta a la vista que las tierras de Hisui y Sinnoh guardan un
+    parecido muy estrecho entre sí. Aquí, en el lugar que vio nacer a los
+    antiguos sinnohítas, aguardaré eternamente la llegada del elegido
   </p>
 </div>
 
@@ -67,9 +76,21 @@ indicada na caixa de texto. -->
   const app = Vue.createApp({
     data() {
       return {
-        textClass: "",
-        inputValue: "here!"
+        inputValue: "",
+        inputCor: "",
       };
+    },
+    methods: {
+      toggleVisibility() {
+        const parrafo = document.getElementById("parrafo");
+        const boton = document.getElementsByTagName("button")[0];
+        parrafo.classList.toggle("hidden");
+        if (parrafo.classList.contains("hidden")) {
+          boton.innerText = "Amosa o texto";
+        } else {
+          boton.innerText = "Oculta o texto";
+        }
+      },
     },
   });
 
